Refine collapsing margins hack, fix flickering.

--- a/editor/components/block-list/style.scss
+++ b/editor/components/block-list/style.scss
@@ -110,9 +110,8 @@
 	}
 
 	// Prevent collapsing margins @todo try and revisit this, it's conducive to theming to allow these to collapse
-	padding-top: .1px;
-	padding-bottom: .1px;
-
+	padding-top: 1px;
+	padding-bottom: 1px;
 
 	// Space every block using margins instead of padding
 	// This allows margins to collapse, which gives a better representation of how it looks on the frontend
@@ -121,8 +120,8 @@
 		margin-bottom: $block-padding;
 
 		// Prevent collapsing margins @todo try and revisit this, it's conducive to theming to allow these to collapse
-		padding-top: .1px;
-		padding-bottom: .1px;
+		padding-top: 1px;
+		padding-bottom: 1px;
 	}
 
 	margin-bottom: $block-spacing;
@@ -395,9 +394,8 @@
 	> .editor-block-settings-menu,
 	> .editor-block-mover {
 		position: absolute;
-		top: -.9px; // .9px because of the collapsing margins hack, see line 27, @todo revisit when we allow margins to collapse
-		bottom: -.9px; // utilize full vertical space to increase hoverable area
-		padding: .1px 0;
+		top: 0; // stretch to bottom to utilize full vertical space to increase hoverable area
+		bottom: 0;
 		width: $block-side-ui-width;
 
 		/* Necessary for drag indicator */
